kRPC: Backpressure (#462)