@@ -6,7 +6,6 @@ import org.jetbrains.kotlin.gradle.dsl.ExplicitApiMode
 import org.jetbrains.kotlin.gradle.dsl.KotlinVersion
 import org.jetbrains.kotlin.gradle.targets.js.testing.KotlinJsTest
 import org.jetbrains.kotlin.gradle.targets.jvm.tasks.KotlinJvmTest
-import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 import java.nio.file.Files
 
 plugins {
@@ -37,6 +36,8 @@ kotlin {
                 api(projects.krpc.krpcServer)
                 api(projects.krpc.krpcClient)
                 api(projects.krpc.krpcLogging)
+
+                implementation(projects.tests.testUtils)
 
                 implementation(projects.krpc.krpcSerialization.krpcSerializationJson)
 
@@ -71,6 +72,7 @@ kotlin {
                 implementation(libs.slf4j.api)
                 implementation(libs.logback.classic)
                 implementation(libs.coroutines.debug)
+                implementation(libs.lincheck)
             }
         }
     }
@@ -79,7 +81,15 @@ kotlin {
 }
 
 tasks.withType<KotlinJvmTest> {
+    // lincheck agent
+    jvmArgs("-XX:+EnableDynamicAgentLoading")
     environment("LIBRARY_VERSION", libs.versions.kotlinx.rpc.get())
+
+    if (project.hasProperty("stressTests") && project.property("stressTests") == "true") {
+        include("kotlinx/rpc/krpc/test/stress/**")
+    } else {
+        exclude("kotlinx/rpc/krpc/test/stress/**")
+    }
 }
 
 val resourcesPath = projectDir.resolve("src/jvmTest/resources")
